# transskribo

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  build-loop.sh  claude-progress.txt  config.example.toml  config.toml  pyproject.toml  watch-progress.sh
.aishell/: Dockerfile  config.yaml
.claude/: settings.json
.claude/commands/: evolve.md
docs/: design.md  future-ideas.md  requirements.md  setup-colab.md  tasks.md
src/transskribo/: __init__.py  cli.py  config.py  docx_writer.py  enricher.py  hasher.py  logging_setup.py  output.py  reporter.py  scanner.py  transcriber.py  validator.py
templates/: basic.docx
tests/: conftest.py  test_cli.py  test_config.py  test_docx_writer.py  test_enrich_cli.py  test_enricher.py  test_export_cli.py  test_hasher.py  test_logging_setup.py  test_output.py  test_reporter.py  test_scanner.py  test_transcriber.py  test_validator.py
