[project]
name = "transskribo"
version = "1.0.0"
description = "CLI tool for batch audio transcription and speaker diarization using WhisperX"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "whisperx>=3.1.1",
    "typer>=0.12",
    "rich>=13.0",
    "tomli-w>=1.0",
    "openai>=1.0",
    "docxtpl>=0.16",
]

[project.scripts]
transskribo = "transskribo.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "pyright>=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/transskribo"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["src"]

[tool.pyright]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
include = ["src"]
